--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <br>
   <div class="content" style="margin-top: -0px;">
       <h3 class="animated-text">WELCOME</h3>
-      <h4>Only Books Contain Informatics</h4>
+      <h4>Only Contain Informatics Books</h4>
   </div>
 </section>
 
